prepare to render breef

--- a/src/app/chat/components/project-breef-filling/project-breef-filling.component.html
+++ b/src/app/chat/components/project-breef-filling/project-breef-filling.component.html
@@ -93,7 +93,7 @@
         <p class="question-title">
           4. Какой у Вас корпоративный стиль?
         </p>
-        <div class="answer file">
+        <div class="answer file" (click)="openFilesUploader()">
           прикрепите файл
         </div>
       </div>
