--- a/src/app/chat/components/project-breef-filling/project-breef-filling.component.scss
+++ b/src/app/chat/components/project-breef-filling/project-breef-filling.component.scss
@@ -136,7 +136,7 @@
         line-height: 18px;
         color: #3c7eea;
         padding-left: 30px;
-
+        text-transform: uppercase;
         &:before {
           position: absolute;
           width: 100%;
