--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -2,11 +2,11 @@
   <section class="collocutors">
     <app-collocutors-list [chatType]="chatType" (currentRoom)="getCurrentRoom($event)"></app-collocutors-list>
   </section>
-  <section class="messager" *ngIf="collocutorData || newDealId">
-    <app-messager *ngIf="collocutorData && (!newDealId || collocutorData.breef == 1)" [collocutorData]="collocutorData"
+  <section class="messager" *ngIf="collocutorData">
+    <app-messager *ngIf="collocutorData && collocutorData.breef == 1" [collocutorData]="collocutorData"
       [chatType]="chatType" [(isFileLoaderVisible)]="isFileLoaderVisible"></app-messager>
-    <app-project-breef-filling *ngIf="(newDealId || collocutorData.breef == 0) && chatType === 'work'"
-      [dealId]="newDealId" [collocutorData]="collocutorData">
+    <app-project-breef-filling *ngIf="collocutorData && collocutorData.breef == 0 && chatType === 'work'"
+      [collocutorData]="collocutorData" [(isFileLoaderVisible)]="isFileLoaderVisible">
     </app-project-breef-filling>
   </section>
   <section class="collocutors-tools">
@@ -15,6 +15,7 @@
     </app-collocutor-information>
   </section>
   <section class="file-loader" *ngIf="isFileLoaderVisible && collocutorData">
-    <app-upload-file [(isFileLoaderVisible)]="isFileLoaderVisible" [collocutorData]="collocutorData"></app-upload-file>
+    <app-upload-file [(isFileLoaderVisible)]="isFileLoaderVisible" [collocutorData]="collocutorData"
+      [chatType]="chatType"></app-upload-file>
   </section>
 </section>
