--- a/src/app/chat/components/project-breef-filling/project-breef-filling.component.scss
+++ b/src/app/chat/components/project-breef-filling/project-breef-filling.component.scss
@@ -104,7 +104,7 @@
       .check-box {
         ul {
           padding: 0;
-
+          margin: 0;
           li {
             list-style: none;
             margin-bottom: 11px;
@@ -118,14 +118,14 @@
               padding-left: 38px;
               &:before {
                 left: 0;
-                top: 1px;
+                top: 4px;
                 position: absolute;
               }
             }
           }
         }
       }
-      .file {
+      .answer .file {
         position: relative;
         height: 20px;
         cursor: pointer;
