--- a/src/app/chat/components/messager-tools/messager-tools.component.html
+++ b/src/app/chat/components/messager-tools/messager-tools.component.html
@@ -1,5 +1,5 @@
 <div class="inform">
-  <div class="tools" *ngIf="2===1">
+  <div class="tools" >
     <h6>Действия</h6>
 
     <button>отменить работу</button>
@@ -18,7 +18,7 @@
       <p>Коммерческое использование</p>
     </div>
   </div>
-  <div class="timer" class="tools" *ngIf="2===1">
+  <div class="timer" class="tools" >
     <h6>Кол-во дней до завершения заказа</h6>
     <div class="clock">
       <div> <span>0</span> </div>
