--- a/src/app/chat/components/project-breef-filling/project-breef-filling.component.html
+++ b/src/app/chat/components/project-breef-filling/project-breef-filling.component.html
@@ -33,9 +33,24 @@
         </div>
       </div>
       <div class="btns">
-        <button class="btn-sec">отменить</button>
+        <button class="btn-sec" (click)="deleteBreef()">отменить</button>
         <button class="btn" (click)="sendBreef()">отправить</button>
       </div>
     </form>
   </section>
+
+  <div class="error-popup" *ngIf="exitFromBreefPopUpVisible">
+    <span class="hide" (click)="returnToBreef()"></span>
+    <div class="icon"></div>
+    <div class="info">
+      <p class="title">Вы не заполнили бриф до конца,
+        мы не можем его сохранить</p>
+      <p class="description">Экономте своё время, для того, чтобы Вам заново не заполнять бриф, дозаполните его сейчас  </p>
+    </div>
+    <div class="controls">
+      <button class="exit-brteef" (click)="confirmDeleteBreef()"> <span>отказаться</span></button>
+      <button class="return-to-breef" (click)="returnToBreef()"> <span>заполнить</span></button>
+    </div>
+  </div>
+
 </div>
