--- a/src/app/chat/components/messager-tools/messager-tools.component.scss
+++ b/src/app/chat/components/messager-tools/messager-tools.component.scss
@@ -21,7 +21,7 @@
       border-radius: 8px;
       background-color: #ffffff;
       color: #728096;
-      font-family: "Source Sans Pro";
+      font-family: "Source Sans Pro", sans-serif;
       font-size: 12px;
       font-weight: 400;
       letter-spacing: 1px;
