--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
@@ -56,4 +56,11 @@
       border-color: #9de5ff;
     }
   }
+
+  &.hold-money {
+    h5 {
+      color: #919CDD;
+      border-color: #D4DAFF;
+    }
+  }
 }
