--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
@@ -1,4 +1,4 @@
-<div class="system-message" [ngClass]="{'breef': messageBreef }">
+<div class="system-message {{ messageClass }}">
   <div>
     <div class="icon">
       <img [src]="'/assets/images/icons/deals-icons/' + systemMessage.message.name + '.png'" alt="system-icon">
@@ -18,6 +18,10 @@
     </div>
   </div>
   <div class="actions">
-    <button *ngIf="!isUserFreelancer && messageBreef" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
+    <button *ngIf="!isUserFreelancer && messageClass === 'breef'" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
+
+    <button *ngIf="isUserFreelancer && messageClass === 'hold-money'" class="btn">уведометь о начале работы</button>
   </div>
 </div>
+
+
