--- a/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.html
+++ b/src/app/shared/modules/admin-chart-canvas/admin-chart-canvas.component.html
@@ -3,11 +3,10 @@
     <div>
       <h5>финансовая статистика</h5>
       <div class="chart-type">
-        <div class="cerrent" (click)="openTypesList()">год</div>
+        <div class="cerrent" (click)="openTypesList()">{{ curerntType.name }}</div>
         <ul class="list" [ngClass]="{ show: listOpen && listOpen === true, hide: !listOpen && listOpen === false }">
-          <li>год</li>
-          <li>месяц</li>
-          <li>день</li>
+          <li *ngFor="let type of chartTypes" (click)="selectChartType(type)"> {{ type.name  }} </li>
+
         </ul>
       </div>
     </div>
